Bug 470709 - Doesn't build with ocaml 5
Summary: Doesn't build with ocaml 5
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-06-06 17:24 UTC by Antonio Rojas
Modified: 2023-06-06 19:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2023-06-06 17:24:04 UTC
Looks like 'copy_string' and 'callback' are no longer available:

/usr/bin/ld: /tmp/ccWsOZER.ltrans0.ltrans.o: in function `solve_equation':
/usr/src/debug/kalzium/build/src/<artificial>:21: undefined reference to `copy_string'
/usr/bin/ld: /usr/src/debug/kalzium/build/src/<artificial>:22: undefined reference to `callback'
collect2: error: ld returned 1 exit status
make[2]: *** [src/CMakeFiles/kalzium.dir/build.make:1136: bin/kalzium] Error 1
make[1]: *** [CMakeFiles/Makefile2:2129: src/CMakeFiles/kalzium.dir/all] Error 2
Comment 1 Bug Janitor Service 2023-06-06 17:44:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/kalzium/-/merge_requests/34
Comment 2 Antonio Rojas 2023-06-06 19:41:49 UTC
Git commit 80a9ab41b91ab849794bb7830f0a98d862c08269 by Antonio Rojas.
Committed on 06/06/2023 at 17:42.
Pushed by aacid into branch 'master'.

Fix build with OCaml 5

'copy_string' and 'callback' were deprecated in OCaml 4 (11 years ago) and removed in OCaml 5

M  +2    -2    src/solver/modwrap.c

https://invent.kde.org/education/kalzium/-/commit/80a9ab41b91ab849794bb7830f0a98d862c08269