Fix build with OCaml 5

'copy_string' and 'callback' were deprecated in OCaml 4 (11 years ago) and removed in OCaml 5

BUG: 470709